--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,37 @@
   <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Black Jack</title>
+    <title>Blackjack</title>
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header>
+      <h1>BLACK JACK</h1>
+    </header>
+    <main>
+      <div class='dealer-hand'>
+        <img class="back" src="./images/Red_back.jpg" />
+      </div>
+      <div class='player-hand'></div>
+    </main>
+    <footer>
+      <span>
+        <aside>
+          <h2>Dealer</h2>
+          <h2 class="dealer-score"></h2>
+        </aside>
+        <aside>
+          <h2>Player</h2>
+          <h2 class=player-score></h2>
+        </aside>
+      </span>
+      <div class="controls">
+        <button class="hits">HIT</button>
+        <button class="stays">STAND</button>
+        <button class='reset'>NEW GAME</button>
+      </div>
+      <h3 class="winlose"></h3>
+    </footer>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
